  - replace Jeweler & Rubygems by Bundler
0.5.1
  - fixed .failed? bug
  - fixed key prefixes (broken in 0.5.0)
0.5.0
  - all checkers methods accept a ':message => "CUSTOM MSG"'
0.4.0
  - added `is_on_path`
0.3.0
  - added value_of()
  - added checks not linked to a config file  (FailFast().check do .. end)  
0.2.1
  - improve + colour the report template
0.2.0
  - added `FailFast(<afile>).check_now.but_fail_later` + FailFast.fail_now
  - added `FailFast.failed?'
0.1.2
  - added commands : only_if and skip_if
0.1.1
  - added command : fail('message')
0.1.0
  - initial version