@@ -8,9 +8,11 @@ class FailFast
     #   directory_exists '/tmp', :message => 'custom message'
     #
     def directory_exists(path, options={})
-      unless File.exists?(path) && File.directory?(path)
+      success = File.exists?(path) && File.directory?(path)
+      unless success
         add_error ErrorDetails.new(nil, :directory_not_found, path, options[:message])
       end
+      success
     end
 
     # Ensure the key value is an existing directory
@@ -23,12 +25,14 @@ class FailFast
       p = key_value_regexp_options(raw_key, params)
       key, options = p.key, p.options
 
-      return unless has_value_for raw_key, :message => options[:message]
+      return false unless has_value_for raw_key, :message => options[:message]
 
       path = value_for_deep_key(key)
-      unless File.exists?(path) && File.directory?(path)
+      success = File.exists?(path) && File.directory?(path)
+      unless success
         add_error ErrorDetails.new(key, :directory_not_found, p.value, options[:message])
       end
+      success
     end
 
   end
