@@ -8,9 +8,11 @@ class FailFast
     #   is_on_path 'jruby', :message => 'custom message'
     #
     def is_on_path(app, options = {})
-      unless found_on_the_path(app)
+      success = found_on_the_path(app)
+      unless success
         add_error ErrorDetails.new(nil, :not_on_path, app, options[:message])
       end
+      success
     end
 
     # Ensure the key value can be found on the path
@@ -20,17 +22,19 @@ class FailFast
     #   is_on_path_for 'file_compressor', :message => 'custom message'
     #
     def is_on_path_for(key, options = {})
-      return unless has_value_for key, :message =>  options[:message]
+      return false unless has_value_for key, :message =>  options[:message]
       app   = value_for_deep_key(key)
 
-      unless found_on_the_path(app)
+      success = found_on_the_path(app)
+      unless success
         add_error ErrorDetails.new(key, :not_on_path, app, options[:message])
       end
+      success
     end
 
   private
     def found_on_the_path(app)
-      `which #{app}` =~ /#{app}$/
+      !!(`which #{app}` =~ /#{app}$/)
     end
   end
 end
