@@ -1,4 +1,11 @@
-  - replace Jeweler & Rubygems by Bundler
+  - changed: replace Jeweler & Rubygems by Bundler
+  - add: all checkers methods return a success status (true/false)
+    ex:
+        ...
+        unless directory_exists_for  '/log'           # now returns true/false
+          puts "The /log directory is missing"        #  ...
+          puts "create it with $ mkdir /log"          #  ...
+        end                                           #  ...
 0.5.1
   - fixed .failed? bug
   - fixed key prefixes (broken in 0.5.0)
